fix ECM-2171: IE6: Error in display File Explorer portlet when the scrollbar appears

--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/DefaultStylesheet.css
@@ -15,8 +15,20 @@
   background: url('DefaultSkin/background/LineDecorator2x1.gif') repeat-y center center;
 }
 
+.UIJCRExplorerPortlet .UIJCRExplorer .UIWorkingArea {
+	width: 100%;
+}
+
 .UIJCRExplorerPortlet .UIJCRExplorer .UIWorkingArea .UIResizableBlock {
 	width: 99%;
+}
+
+.UIJCRExplorerPortlet .UIWorkingArea .UIPageIterator .PageIteratorContainer {
+	float: none;
+}
+
+.UIJCRExplorerPortlet .UIJCRExplorer .UIDocumentWorkspace .UITabPane {
+	height: auto;
 }
 
 /*############################## -- End UIJCRExplorer -- ##############################*/
@@ -829,9 +841,4 @@
 
 /*====================================UIDivInfo==================================*/
 
-.UIJCRExplorer .UIDivInfo .UITabPane {
-	width: 97%;
-	padding: 0px; 
-	margin: auto;
-}
 /*############################## -- End UIDocumentWorkspace -- ##############################*/
